# ng-outlook-google-calendar-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  extract_json.py  implementation-notes.md  main.py  pydantic_experiments.py  pyproject.toml  render.yaml  renovate.json5
Power Automate flows/: release process.md
calendar_sync_helper/: constants.py  cryptography_utils.py  entities.py  github_client.py  utils.py
files/: automated-test-002d6967-a8c8-44e7-bd6f-72d1af6136ef  automated-test-00c0781e-aaff-49a8-8a56-5ed5b0f4c88f  automated-test-00f3f800-ef4d-4694-9dae-ca39e1218c1b  automated-test-019537b7-2a68-4e8a-bd87-f78e7d9b6291  automated-test-033fb936-ed0c-4989-931c-3af1a3e4ecd2  automated-test-035a0ebd-3d21-4b54-a9fd-09c782783467  automated-test-03a69153-531f-48fe-b422-bae46301755a  automated-test-03be4ec4-60f1-47b0-af61-bf8f8de754dd  automated-test-03e47ce2-5793-49f5-8c14-e95e2dab0288  automated-test-04333b43-04a5-4ab7-bb01-ac9817394db3  automated-test-0471d58c-ea33-45f9-b97b-36fdac32193f  automated-test-05980cc9-5b11-4d70-bceb-5c200db79bcf  automated-test-0819d0b3-43e8-4766-8663-efb3d36cf4c6  automated-test-082ba5fb-b2cd-45c5-8841-10104b133551  automated-test-0835ef38-a47b-4bde-ae46-37556f2705bb  automated-test-0926382d-edbe-4edb-9430-75076ebaaa7b  automated-test-09da6422-c154-4211-908b-7f2ad5cf9161  automated-test-0a86d556-f13d-49a7-bca7-dc7cfffd089f  automated-test-0b0fc832-ffd0-400e-bd3a-633ac6197911  automated-test-0b175228-832c-47e1-932e-f5adaa84e601  automated-test-0b78a64d-0abd-4337-842b-dcdbcd38ec14  (+494 more)
tests/: __init__.py  conftest.py  (+4 more)
(+12 files in other folders)
