[tool.poetry]
name = "calendar-sync-helper"
version = "0.1.0"
description = ""
authors = ["Marius Shekow"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = {extras = ["standard"], version = "0.115.6"}
validators = "0.34.0"
cryptography = "44.0.0"
pygithub = "2.5.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-httpserver = "1.1.0"
