[tool.poetry]
name = "calendar-sync-helper"
version = "0.1.0"
description = ""
authors = ["Marius Shekow"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = {extras = ["standard"], version = "0.117.1"}
validators = "0.35.0"
cryptography = "46.0.1"
pygithub = "2.8.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.4.2"
pytest-httpserver = "1.1.3"
